Fix some details Set text to not wrap/overflow when container is shrinked. Set min-width to certain elements. Change some css tags structure.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-* {
-    border: 3px solid red;
-}
 body {
     font-family: 'Open Sans', 'Helvetica Neue';
     margin: 0;
@@ -33,7 +30,8 @@ header .container {
     display: flex;
     justify-content: space-between;
     margin-bottom: 60px;
-    gap: 16px;
+    gap: 400px;
+    white-space: nowrap;
 }
 
 .links {
@@ -45,20 +43,17 @@ header .container {
     gap: 24px;
 }
 
-#main-image {
-    height: 50px;
-    width: 300px;
-    background-color: #b3b4b66f;
-    padding: 60px;
-    margin-left: auto;
-
+.main .left-text {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 400px;
+    max-width: 400px;
+    gap: 6px;
 }
 
 .link,
-#small-text {
+.left-text .text {
     font-size: 14px;
     color: #b3b4b6;
 }
@@ -71,11 +66,17 @@ h1 {
     color: #F9FAF8;
 }
 
-.left-text {
+.main .image {
+    height: 50px;
+    width: 300px;
+    background-color: #b3b4b66f;
+    padding: 60px;
+    margin-left: auto;
+    white-space: nowrap;
+
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 6px;
+    align-items: center;
+    justify-content: center;
 }
 
 /* SIGN-UP BUTTON */
@@ -97,6 +98,10 @@ h1 {
     align-content: center;
 }
 
+h2 {
+    white-space: nowrap;
+}
+
 .info ul {
     gap: 20px;
     display: flex;
@@ -109,7 +114,6 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 li .img {
@@ -131,6 +135,7 @@ li .img {
 
 .quote .container {
     max-width: 400px;
+    min-width: 400px;
     display: flex;
     flex-direction: column;
 }
@@ -166,6 +171,7 @@ section.ad {
     padding: 32px 90px;
     flex: 1;
     max-width: 400px;
+    min-width: 400px;
 
     display: flex;
     justify-content: space-between;
